# Newton-Fractal

./: README.md  flake.nix  pyproject.toml
src/: __main__.py
